# biscuit-rust

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs
.github/workflows/: codspeed.yml  release.yml  rust.yml
benches/: token.rs
biscuit-auth/: CHANGELOG.md  Cargo.toml  README.md  build.rs  cbindgen.toml
biscuit-auth-datalog-macros/: Cargo.toml
biscuit-auth-datalog-macros/src/: lib.rs
biscuit-auth-datalog-macros/tests/: simple_test.rs
biscuit-auth/benches/: token.rs
biscuit-auth/examples/: printer.rs  testcases.rs  third_party.rs  verifying_printer.rs
biscuit-auth/samples/: README.md  samples.json  test001_basic.bc  test002_different_root_key.bc  test003_invalid_signature_format.bc  test004_random_block.bc  test005_invalid_signature.bc  test006_reordered_blocks.bc  test007_scoped_rules.bc  test008_scoped_checks.bc  test009_expired_token.bc  test010_authorizer_scope.bc  test011_authorizer_authority_caveats.bc  test012_authority_caveats.bc  test013_block_rules.bc  test014_regex_constraint.bc  test015_multi_queries_caveats.bc  test016_caveat_head_name.bc  test017_expressions.bc  test018_unbound_variables_in_rule.bc  test019_generating_ambient_from_variables.bc  test020_sealed.bc  test021_parsing.bc  test022_default_symbols.bc  test023_execution_scope.bc  test024_third_party.bc  test025_check_all.bc  test026_public_keys_interning.bc  test027_integer_wraparound.bc  test028_expressions_v4.bc  test029_reject_if.bc  test030_null.bc  test031_expressions_v5.bc  test031_heterogeneous_equal.bc  test032_expressions_v5.bc  test032_laziness_closures.bc  test033_array_map.bc  test033_typeof.bc  test034_array_map.bc  test035_ffi.bc  (+3 more)
biscuit-auth/src/: bwk.rs  capi.rs  error.rs  lib.rs  macros.rs  parser.rs  time.rs
biscuit-auth/src/crypto/: ed25519.rs  mod.rs  p256.rs
biscuit-auth/src/datalog/: expression.rs  mod.rs  origin.rs  symbol.rs
biscuit-auth/src/format/: convert.rs  mod.rs  schema.proto  schema.rs
biscuit-auth/src/token/: authorizer.rs  block.rs  builder.rs  builder_ext.rs  mod.rs  public_keys.rs  third_party.rs  unverified.rs
biscuit-auth/src/token/authorizer/: snapshot.rs
biscuit-auth/src/token/builder/: algorithm.rs  authorizer.rs  biscuit.rs  block.rs  check.rs  expression.rs  fact.rs  policy.rs  predicate.rs  rule.rs  scope.rs  term.rs
biscuit-auth/tests/: capi.rs  macros.rs  rights.rs
biscuit-capi/: Cargo.toml  README.md
biscuit-capi/src/: lib.rs
biscuit-capi/tests/: capi.rs
biscuit-parser/: CHANGELOG.md  Cargo.toml  README.md
biscuit-parser/src/: builder.rs  error.rs  lib.rs  parser.rs
biscuit-quote/: CHANGELOG.md  Cargo.toml  README.md  shell.nix
biscuit-quote/src/: lib.rs
biscuit-quote/tests/: simple_test.rs
examples/: printer.rs  testcases.rs
src/: capi.rs  error.rs  format.rs  lib.rs  parser.rs  time.rs
src/crypto/: mod.rs
src/datalog/: expression.rs  mod.rs  symbol.rs
src/format/: convert.rs  mod.rs  schema.proto  schema.rs
src/token/: authorizer.rs  builder.rs  mod.rs  sealed.rs  unverified.rs  verifier.rs
src/wasm/: builder.rs  crypto.rs  mod.rs  verifier.rs
tests/: capi.rs  rights.rs  wasm_test.js  wasm_test.rs
