[package]
name = "biscuit-auth"
version = "0.8.0"
description = "an authentication/authorization token with decentralized verification and offline delegation"
authors = ["Geoffroy Couprie <geoffroy.couprie@clever-cloud.com>"]
edition = "2018"
build = "build.rs"
license = "Apache-2.0"
documentation = "https://docs.rs/biscuit-auth"
homepage = "https://github.com/clevercloud/biscuit"
repository = "https://github.com/clevercloud/biscuit-rust"

[features]
default = ["regex-full"]
regex-full = [ "regex/perf", "regex/unicode"]
# used by cargo-c to signal the compilation of C bindings
capi = ["rand", "inline-c"]

[dependencies]
rand_core = "^0.5"
sha2 = "^0.9"
hmac = "^0.10"
curve25519-dalek = "^3.0"
prost = "0.6"
bytes = "0.5"
prost-types = "0.6"
regex = { version = "1.3", default-features = false, features = ["std"] }
nom = {version = "6", default-features = false, features = ["std"] }
chrono = "0.4"
hex = "0.4"
zeroize = { version = "1", default-features = false }
thiserror = "1"
rand = { version = "0.7", optional = true }
inline-c = { version = "0.1", optional = true }

[dev-dependencies]
rand = "0.7"
colored-diff = "0.2"

[package.metadata.capi.library]
# Used as the library name and defaults to the crate name. This might get
# prefixed with `lib` depending on the target platform.
name = "biscuit_auth"

include = [
  "Cargo.toml",
  "cbindgen.toml",
  "build.rs",
  "examples/*.rs",
  "LICENSE",
  "README.md",
  "src/*.rs",
  "src/*/*.rs",
  "tests/*.rs"
]
