[package]
name = "biscuit-auth"
version = "1.1.0"
description = "an authentication/authorization token with decentralized verification and offline delegation"
authors = ["Geoffroy Couprie <geoffroy.couprie@clever-cloud.com>"]
edition = "2018"
build = "build.rs"
license = "Apache-2.0"
documentation = "https://docs.rs/biscuit-auth"
homepage = "https://github.com/clevercloud/biscuit"
repository = "https://github.com/clevercloud/biscuit-rust"

[features]
default = ["regex-full"]
regex-full = [ "regex/perf", "regex/unicode"]
# used by cargo-c to signal the compilation of C bindings
capi = ["inline-c"]
wasm = ["wasm-bindgen"]

[dependencies]
rand_core = "^0.5"
sha2 = "^0.9"
prost = "0.9"
prost-types = "0.9"
regex = { version = "1.5", default-features = false, features = ["std"] }
nom = {version = "7", default-features = false, features = ["std"] }
chrono = "0.4"
hex = "0.4"
zeroize = { version = "1", default-features = false }
thiserror = "1"
rand = { version = "0.7" }
inline-c = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
base64 = "0.13.0"
ed25519-dalek = "1.0.1"

[dev-dependencies]
rand = "0.7"
colored-diff = "0.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"

#[build-dependencies]
#prost-build = "0.9"

[package.metadata.capi.library]
# Used as the library name and defaults to the crate name. This might get
# prefixed with `lib` depending on the target platform.
name = "biscuit_auth"

include = [
  "Cargo.toml",
  "cbindgen.toml",
  "build.rs",
  "examples/*.rs",
  "LICENSE",
  "README.md",
  "src/*.rs",
  "src/*/*.rs",
  "tests/*.rs"
]
