[package]
name = "biscuit-quote"
version = "0.1.0"
edition = "2021"
description = "macros for compile time datalog parsing for Biscuit authorization tokens"
authors = ["Clément Delafargue <clement@delafargue.name>", "Geoffroy Couprie <contact@geoffroycouprie.com>"]
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
biscuit-auth = { path = "../biscuit-auth", features = ["datalog-macro"], version = "2.2.0" }
quote = "1.0.14"
syn = { version = "1.0.85", features = ["full", "extra-traits"] }
