[package]
name = "biscuit-quote"
version = "0.1.0"
edition = "2021"
description = "macros for compile time datalog parsing for Biscuit authorization tokens"
authors = ["Clément Delafargue <clement@delafargue.name>", "Geoffroy Couprie <contact@geoffroycouprie.com>"]
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
biscuit-parser = { path = "../biscuit-parser", features = ["datalog-macro"], version = "0.1.0" }
quote = "1.0.14"
syn = { version = "1.0.85", features = ["full", "extra-traits"] }
proc-macro-error = "1.0"

[dev-dependencies]
biscuit-auth = { path = "../biscuit-auth", version = "2.2.0", features = ["datalog-macro"] }
hex = "0.4.3"
