[package]
name = "biscuit-quote"
version = "0.2.2"
edition = "2021"
description = "macros for compile time datalog parsing for Biscuit authorization tokens"
authors = ["Clément Delafargue <clement@delafargue.name>", "Geoffroy Couprie <contact@geoffroycouprie.com>"]
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
biscuit-parser = { path = "../biscuit-parser", features = ["datalog-macro"], version = "0.1.2" }
proc-macro2 = "1"
quote = "1.0.14"
syn = { version = "1.0.85", features = ["full", "extra-traits"] }
proc-macro-error = "1.0"

[dev-dependencies]
hex = "0.4.3"
